--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <main>
         <h1>Coins Tic-Tac-Toe</h1>
-        <h2 class="player1_score">Player 1:<span id='player1_score'>0</span></h2>
-        <h2 class="player2_score">Player 2:<span id='player1_score'>0</span></h2>
+        <h2 class="player1">Player1: <span id='player1_score'>0</span> points</h2>
+        <h2 class="player2">Player2: <span id='player1_score'>0</span> points</h2>
         <div class="board">
             <div class="tile">1</div>
             <div class="tile">2</div>
@@ -23,7 +23,7 @@
             <div class="tile">8</div>
             <div class="tile">9</div>
         </div>
-        <button id="reset">Restart</button>
+        <button id="reset-btn" class="reset-btn">Restart</button>
     </main>
 </body>
 </html>
