Intialzing main variables and creating winPattern Set(), and intiating the main play function after clicking in '/js/app.js' with little improvement for icons in '/styles/styles.css'

--- a/index.html
+++ b/index.html
@@ -25,5 +25,7 @@
         </div>
         <button id="reset-btn" class="reset-btn">Restart</button>
     </main>
+
+    <script src="./js/app.js"></script>
 </body>
 </html>
