--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Coins Tic-Tac-Toe</h1>
         <h2 class="player1">Player1: <span id='player1_score'>0</span> points</h2>
         <h2 class="player2">Player2: <span id='player1_score'>0</span> points</h2>
-        <div class="board">
+        <div id='board' class="board">
             <div class="tile">1</div>
             <div class="tile">2</div>
             <div class="tile">3</div>
