Removed unnecessary tiles values from 'index.html' and add CSS-classes to add when win occurs together with js conditions in '/js/app.js'

--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 </head>
 <body>
     <main>
-        <h1>Coins Tic-Tac-Toe</h1>
+        <h1 id="title">Coins Tic-Tac-Toe</h1>
         <h2 class="player1">Player1: <span id='player1_score'>0</span> points</h2>
         <h2 class="player2">Player2: <span id='player1_score'>0</span> points</h2>
         <div id='board' class="board">
-            <div class="tile">1</div>
-            <div class="tile">2</div>
-            <div class="tile">3</div>
-            <div class="tile">4</div>
-            <div class="tile">5</div>
-            <div class="tile">6</div>
-            <div class="tile">7</div>
-            <div class="tile">8</div>
-            <div class="tile">9</div>
+            <div class="tile"></div>
+            <div class="tile"></div>
+            <div class="tile"></div>
+            <div class="tile"></div>
+            <div class="tile"></div>
+            <div class="tile"></div>
+            <div class="tile"></div>
+            <div class="tile"></div>
+            <div class="tile"></div>
         </div>
         <button id="reset-btn" class="reset-btn">Restart</button>
     </main>
